--- a/rtd/_readthedocs/genindex.html
+++ b/rtd/_readthedocs/genindex.html
@@ -95,6 +95,15 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li>
+    add_button()
+
+      <ul>
+        <li><a href="lua_scripting.html#add_button">built-in function</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
     add_menu()
 
       <ul>
@@ -111,6 +120,8 @@
     built-in function
 
       <ul>
+        <li><a href="lua_scripting.html#add_button">add_button()</a>
+</li>
         <li><a href="lua_scripting.html#add_menu">add_menu()</a>
 </li>
         <li><a href="lua_scripting.html#cd">cd()</a>
@@ -169,7 +180,7 @@
 </li>
         <li><a href="lua_scripting.html#statusbar">statusbar()</a>
 </li>
-        <li><a href="lua_scripting.html#id0">toggle()</a>, <a href="lua_scripting.html#toggle">[1]</a>
+        <li><a href="lua_scripting.html#id0">toggle()</a>, <a href="lua_scripting.html#id1">[1]</a>, <a href="lua_scripting.html#id2">[2]</a>, <a href="lua_scripting.html#toggle">[3]</a>
 </li>
         <li><a href="lua_scripting.html#trash">trash()</a>
 </li>
@@ -458,7 +469,7 @@
     toggle()
 
       <ul>
-        <li><a href="lua_scripting.html#id0">built-in function</a>, <a href="lua_scripting.html#toggle">[1]</a>
+        <li><a href="lua_scripting.html#id0">built-in function</a>, <a href="lua_scripting.html#id1">[1]</a>, <a href="lua_scripting.html#id2">[2]</a>, <a href="lua_scripting.html#toggle">[3]</a>
 </li>
       </ul></li>
   </ul></td>
