--- a/rtd/_readthedocs/installation.html
+++ b/rtd/_readthedocs/installation.html
@@ -22,7 +22,9 @@
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="Getting Started" href="getting_started.html" />
-    <link rel="prev" title="Navi Documentation" href="index.html" /> 
+    <link rel="prev" title="Navi Documentation" href="index.html" />
+    <link href="_static/style.css" rel="stylesheet" type="text/css">
+
 </head>
 
 <body class="wy-body-for-nav"> 
