removed toggle function for ui elements ...

--- a/rtd/_readthedocs/genindex.html
+++ b/rtd/_readthedocs/genindex.html
@@ -95,6 +95,7 @@
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
  | <a href="#U"><strong>U</strong></a>
+ | <a href="#V"><strong>V</strong></a>
  
 </div>
 <h2 id="A">A</h2>
@@ -436,13 +437,13 @@
 </li>
       <li><a href="api.html#navi.api.select_item">select_item() (in module navi.api)</a>
 </li>
-      <li><a href="api.html#id5">set() (in module navi.keymap)</a>, <a href="api.html#navi.keymap.set">[1]</a>
+      <li><a href="api.html#id2">set() (in module navi.keymap)</a>, <a href="api.html#navi.keymap.set">[1]</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api.html#navi.ui.toolbar.set_items">set_items() (in module navi.ui.toolbar)</a>
 </li>
-      <li><a href="api.html#id2">set_module_text() (in module navi.ui.statusbar)</a>, <a href="api.html#navi.ui.statusbar.set_module_text">[1]</a>
+      <li><a href="api.html#id0">set_module_text() (in module navi.ui.statusbar)</a>, <a href="api.html#navi.ui.statusbar.set_module_text">[1]</a>
 </li>
       <li><a href="api.html#navi.ui.statusbar.set_modules">set_modules() (in module navi.ui.statusbar)</a>
 </li>
@@ -458,12 +459,12 @@
 <h2 id="T">T</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api.html#id4">toggle() (in module navi.ui.menubar)</a>, <a href="api.html#navi.ui.menubar.toggle">[1]</a>
+      <li><a href="api.html#navi.ui.menubar.toggle">toggle() (in module navi.ui.menubar)</a>
 
       <ul>
-        <li><a href="api.html#id0">(in module navi.ui.statusbar)</a>, <a href="api.html#navi.ui.statusbar.toggle">[1]</a>
+        <li><a href="api.html#navi.ui.statusbar.toggle">(in module navi.ui.statusbar)</a>
 </li>
-        <li><a href="api.html#id3">(in module navi.ui.toolbar)</a>, <a href="api.html#navi.ui.toolbar.toggle">[1]</a>
+        <li><a href="api.html#navi.ui.toolbar.toggle">(in module navi.ui.toolbar)</a>
 </li>
       </ul></li>
       <li><a href="api.html#navi.api.toggle_mark">toggle_mark() (in module navi.api)</a>
@@ -496,6 +497,20 @@
 </li>
       <li><a href="api.html#navi.api.unregister_function">unregister_function() (in module navi.api)</a>
 </li>
+  </ul></td>
+</tr></table>
+
+<h2 id="V">V</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api.html#navi.ui.menubar.visible">visible (in module navi.ui.menubar)</a>
+
+      <ul>
+        <li><a href="api.html#navi.ui.statusbar.visible">(in module navi.ui.statusbar)</a>
+</li>
+        <li><a href="api.html#navi.ui.toolbar.visible">(in module navi.ui.toolbar)</a>
+</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
