--- a/rtd/_readthedocs/genindex.html
+++ b/rtd/_readthedocs/genindex.html
@@ -36,7 +36,7 @@
             Navi
           </a>
               <div class="version">
-                1.2
+                1.2.1
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
@@ -84,6 +84,7 @@
 
 <div class="genindex-jumpbox">
  <a href="#A"><strong>A</strong></a>
+ | <a href="#B"><strong>B</strong></a>
  | <a href="#C"><strong>C</strong></a>
  | <a href="#D"><strong>D</strong></a>
  | <a href="#E"><strong>E</strong></a>
@@ -120,6 +121,18 @@
   </ul></td>
 </tr></table>
 
+<h2 id="B">B</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api.html#navi.ui.file_panel.symlink.background">background (in module navi.ui.file_panel.symlink)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api.html#navi.ui.file_panel.symlink.bold">bold (in module navi.ui.file_panel.symlink)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -132,6 +145,10 @@
       <li><a href="api.html#navi.api.copy">copy() (in module navi.api)</a>
 </li>
       <li><a href="api.html#navi.api.copy_dwim">copy_dwim() (in module navi.api)</a>
+</li>
+      <li><a href="api.html#navi.api.copy_path">copy_path() (in module navi.api)</a>
+</li>
+      <li><a href="api.html#navi.opt.copy_path_separator">copy_path_separator (in module navi.opt)</a>
 </li>
       <li><a href="api.html#navi.api.count">count() (in module navi.api)</a>
 </li>
@@ -151,16 +168,20 @@
 </li>
       <li><a href="api.html#navi.api.cut_dwim">cut_dwim() (in module navi.api)</a>
 </li>
+      <li><a href="api.html#navi.opt.cycle">cycle (in module navi.opt)</a>
+</li>
   </ul></td>
 </tr></table>
 
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api.html#navi.api.delete">delete() (in module navi.api)</a>
+      <li><a href="api.html#navi.opt.default_directory">default_directory (in module navi.opt)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api.html#navi.api.delete">delete() (in module navi.api)</a>
+</li>
       <li><a href="api.html#navi.api.delete_dwim">delete_dwim() (in module navi.api)</a>
 </li>
   </ul></td>
@@ -179,9 +200,15 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api.html#navi.api.filter">filter() (in module navi.api)</a>
 </li>
+      <li><a href="api.html#navi.api.first_item">first_item() (in module navi.api)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api.html#navi.api.first_item">first_item() (in module navi.api)</a>
+      <li><a href="api.html#navi.ui.file_panel.font">font (in module navi.ui.file_panel)</a>
+</li>
+      <li><a href="api.html#navi.ui.file_panel.font_size">font_size (in module navi.ui.file_panel)</a>
+</li>
+      <li><a href="api.html#navi.ui.file_panel.symlink.foreground">foreground (in module navi.ui.file_panel.symlink)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -209,6 +236,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api.html#navi.api.has_selection">has_selection() (in module navi.api)</a>
 </li>
+      <li><a href="api.html#navi.opt.hidden_files">hidden_files (in module navi.opt)</a>
+</li>
       <li><a href="api.html#navi.api.highlight">highlight() (in module navi.api)</a>
 </li>
   </ul></td>
@@ -217,6 +246,8 @@
 <h2 id="I">I</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api.html#navi.ui.file_panel.icons">icons (in module navi.ui.file_panel)</a>
+</li>
       <li><a href="api.html#navi.io.input">input() (in module navi.io)</a>
 </li>
       <li><a href="api.html#navi.api.is_dir">is_dir() (in module navi.api)</a>
@@ -225,6 +256,8 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api.html#navi.ui.file_panel.symlink.italic">italic (in module navi.ui.file_panel.symlink)</a>
+</li>
       <li><a href="api.html#navi.api.item_name">item_name() (in module navi.api)</a>
 </li>
       <li><a href="api.html#navi.api.item_property">item_property() (in module navi.api)</a>
@@ -283,11 +316,17 @@
 </li>
         <li><a href="api.html#module-navi.keymap">navi.keymap</a>
 </li>
+        <li><a href="api.html#module-navi.opt">navi.opt</a>
+</li>
         <li><a href="api.html#module-navi.shell">navi.shell</a>
 </li>
         <li><a href="api.html#module-navi.ui">navi.ui</a>
 </li>
         <li><a href="api.html#module-navi.ui.context_menu">navi.ui.context_menu</a>
+</li>
+        <li><a href="api.html#module-navi.ui.file_panel">navi.ui.file_panel</a>
+</li>
+        <li><a href="api.html#module-navi.ui.file_panel.symlink">navi.ui.file_panel.symlink</a>
 </li>
         <li><a href="api.html#module-navi.ui.menubar">navi.ui.menubar</a>
 </li>
@@ -352,6 +391,13 @@
 </li>
       </ul></li>
       <li>
+    navi.opt
+
+      <ul>
+        <li><a href="api.html#module-navi.opt">module</a>
+</li>
+      </ul></li>
+      <li>
     navi.shell
 
       <ul>
@@ -372,6 +418,20 @@
 
       <ul>
         <li><a href="api.html#module-navi.ui.context_menu">module</a>
+</li>
+      </ul></li>
+      <li>
+    navi.ui.file_panel
+
+      <ul>
+        <li><a href="api.html#module-navi.ui.file_panel">module</a>
+</li>
+      </ul></li>
+      <li>
+    navi.ui.file_panel.symlink
+
+      <ul>
+        <li><a href="api.html#module-navi.ui.file_panel.symlink">module</a>
 </li>
       </ul></li>
       <li>
@@ -455,6 +515,8 @@
 </li>
       <li><a href="api.html#navi.api.select_item">select_item() (in module navi.api)</a>
 </li>
+      <li><a href="api.html#navi.ui.file_panel.symlink.separator">separator (in module navi.ui.file_panel.symlink)</a>
+</li>
       <li><a href="api.html#id2">set() (in module navi.keymap)</a>, <a href="api.html#navi.keymap.set">[1]</a>
 </li>
   </ul></td>
@@ -477,9 +539,13 @@
 <h2 id="T">T</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api.html#navi.ui.menubar.toggle">toggle() (in module navi.ui.menubar)</a>
+      <li><a href="api.html#navi.opt.terminal">terminal (in module navi.opt)</a>
+</li>
+      <li><a href="api.html#navi.ui.file_panel.toggle">toggle() (in module navi.ui.file_panel)</a>
 
       <ul>
+        <li><a href="api.html#navi.ui.menubar.toggle">(in module navi.ui.menubar)</a>
+</li>
         <li><a href="api.html#navi.ui.pathbar.toggle">(in module navi.ui.pathbar)</a>
 </li>
         <li><a href="api.html#navi.ui.preview_panel.toggle">(in module navi.ui.preview_panel)</a>
@@ -509,12 +575,14 @@
 <h2 id="U">U</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api.html#navi.api.unmark">unmark() (in module navi.api)</a>
+      <li><a href="api.html#navi.ui.file_panel.symlink.underline">underline (in module navi.ui.file_panel.symlink)</a>
 </li>
-      <li><a href="api.html#navi.api.unmark_dwim">unmark_dwim() (in module navi.api)</a>
+      <li><a href="api.html#navi.api.unmark">unmark() (in module navi.api)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api.html#navi.api.unmark_dwim">unmark_dwim() (in module navi.api)</a>
+</li>
       <li><a href="api.html#navi.api.unmount_drive">unmount_drive() (in module navi.api)</a>
 </li>
       <li><a href="api.html#navi.api.unregister_function">unregister_function() (in module navi.api)</a>
@@ -525,9 +593,11 @@
 <h2 id="V">V</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api.html#navi.ui.menubar.visible">visible (in module navi.ui.menubar)</a>
+      <li><a href="api.html#navi.ui.file_panel.visible">visible (in module navi.ui.file_panel)</a>
 
       <ul>
+        <li><a href="api.html#navi.ui.menubar.visible">(in module navi.ui.menubar)</a>
+</li>
         <li><a href="api.html#navi.ui.preview_panel.visible">(in module navi.ui.preview_panel)</a>
 </li>
         <li><a href="api.html#navi.ui.statusbar.visible">(in module navi.ui.statusbar)</a>
