updated to v1.2.8, see changelog.rst

--- a/rtd/_readthedocs/genindex.html
+++ b/rtd/_readthedocs/genindex.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Index &mdash; Navi  documentation</title>
-      <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=80d5e7a1" />
+      <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=b86133f3" />
       <link rel="stylesheet" type="text/css" href="_static/css/theme.css?v=19f00094" />
 
   
@@ -36,7 +36,7 @@
             Navi
           </a>
               <div class="version">
-                1.2.1
+                1.2.8
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
@@ -124,12 +124,20 @@
 <h2 id="B">B</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api.html#navi.ui.file_panel.symlink.background">background (in module navi.ui.file_panel.symlink)</a>
+      <li><a href="api.html#navi.ui.cursor.background">background (in module navi.ui.cursor)</a>
+
+      <ul>
+        <li><a href="api.html#navi.ui.file_panel.symlink.background">(in module navi.ui.file_panel.symlink)</a>
 </li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api.html#navi.ui.file_panel.symlink.bold">bold (in module navi.ui.file_panel.symlink)</a>
+      <li><a href="api.html#navi.ui.cursor.bold">bold (in module navi.ui.cursor)</a>
+
+      <ul>
+        <li><a href="api.html#navi.ui.file_panel.symlink.bold">(in module navi.ui.file_panel.symlink)</a>
 </li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -142,6 +150,8 @@
 </li>
       <li><a href="api.html#navi.hook.clear_functions">clear_functions() (in module navi.hook)</a>
 </li>
+      <li><a href="api.html#navi.ui.header.columns">columns (in module navi.ui.header)</a>
+</li>
       <li><a href="api.html#navi.api.copy">copy() (in module navi.api)</a>
 </li>
       <li><a href="api.html#navi.api.copy_dwim">copy_dwim() (in module navi.api)</a>
@@ -150,10 +160,10 @@
 </li>
       <li><a href="api.html#navi.opt.copy_path_separator">copy_path_separator (in module navi.opt)</a>
 </li>
-      <li><a href="api.html#navi.api.count">count() (in module navi.api)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api.html#navi.api.count">count() (in module navi.api)</a>
+</li>
       <li><a href="api.html#navi.ui.context_menu.create">create() (in module navi.ui.context_menu)</a>
 </li>
       <li><a href="api.html#navi.ui.toolbar.create_button">create_button() (in module navi.ui.toolbar)</a>
@@ -198,29 +208,45 @@
 <h2 id="F">F</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api.html#navi.ui.file_panel.FilePanelOptions">FilePanelOptions (in module navi.ui.file_panel)</a>
+</li>
       <li><a href="api.html#navi.api.filter">filter() (in module navi.api)</a>
 </li>
       <li><a href="api.html#navi.api.first_item">first_item() (in module navi.api)</a>
 </li>
+      <li><a href="api.html#navi.ui.cursor.font">font (in module navi.ui.cursor)</a>
+
+      <ul>
+        <li><a href="api.html#navi.ui.file_panel.font">(in module navi.ui.file_panel)</a>
+</li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api.html#navi.ui.file_panel.font">font (in module navi.ui.file_panel)</a>
-</li>
       <li><a href="api.html#navi.ui.file_panel.font_size">font_size (in module navi.ui.file_panel)</a>
 </li>
-      <li><a href="api.html#navi.ui.file_panel.symlink.foreground">foreground (in module navi.ui.file_panel.symlink)</a>
+      <li><a href="api.html#navi.ui.cursor.foreground">foreground (in module navi.ui.cursor)</a>
+
+      <ul>
+        <li><a href="api.html#navi.ui.file_panel.symlink.foreground">(in module navi.ui.file_panel.symlink)</a>
 </li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api.html#navi.ui.preview_panel.get_props">get_props() (in module navi.ui.preview_panel)</a>
+</li>
       <li><a href="api.html#navi.api.global_marks">global_marks() (in module navi.api)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api.html#navi.api.global_marks_count">global_marks_count() (in module navi.api)</a>
+</li>
+      <li><a href="api.html#navi.ui.file_panel.grid">grid (in module navi.ui.file_panel)</a>
+</li>
+      <li><a href="api.html#navi.ui.file_panel.gridstyle">gridstyle (in module navi.ui.file_panel)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -232,9 +258,11 @@
 </li>
       <li><a href="api.html#navi.api.has_marks_local">has_marks_local() (in module navi.api)</a>
 </li>
+      <li><a href="api.html#navi.api.has_selection">has_selection() (in module navi.api)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api.html#navi.api.has_selection">has_selection() (in module navi.api)</a>
+      <li><a href="api.html#navi.ui.header.HeaderColumn">HeaderColumn (in module navi.ui.header)</a>
 </li>
       <li><a href="api.html#navi.opt.hidden_files">hidden_files (in module navi.opt)</a>
 </li>
@@ -248,6 +276,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api.html#navi.ui.file_panel.icons">icons (in module navi.ui.file_panel)</a>
 </li>
+      <li><a href="api.html#navi.ui.preview_panel.image_dimension">image_dimension (in module navi.ui.preview_panel)</a>
+</li>
       <li><a href="api.html#navi.io.input">input() (in module navi.io)</a>
 </li>
       <li><a href="api.html#navi.api.is_dir">is_dir() (in module navi.api)</a>
@@ -256,8 +286,12 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api.html#navi.ui.file_panel.symlink.italic">italic (in module navi.ui.file_panel.symlink)</a>
+      <li><a href="api.html#navi.ui.cursor.italic">italic (in module navi.ui.cursor)</a>
+
+      <ul>
+        <li><a href="api.html#navi.ui.file_panel.symlink.italic">(in module navi.ui.file_panel.symlink)</a>
 </li>
+      </ul></li>
       <li><a href="api.html#navi.api.item_name">item_name() (in module navi.api)</a>
 </li>
       <li><a href="api.html#navi.api.item_property">item_property() (in module navi.api)</a>
@@ -296,10 +330,6 @@
 </li>
       <li><a href="api.html#navi.api.mark_inverse">mark_inverse() (in module navi.api)</a>
 </li>
-      <li><a href="api.html#navi.ui.marks">marks() (in module navi.ui)</a>
-</li>
-      <li><a href="api.html#navi.ui.messages">messages() (in module navi.ui)</a>
-</li>
       <li><a href="api.html#navi.api.middle_item">middle_item() (in module navi.api)</a>
 </li>
       <li>
@@ -324,9 +354,13 @@
 </li>
         <li><a href="api.html#module-navi.ui.context_menu">navi.ui.context_menu</a>
 </li>
+        <li><a href="api.html#module-navi.ui.cursor">navi.ui.cursor</a>
+</li>
         <li><a href="api.html#module-navi.ui.file_panel">navi.ui.file_panel</a>
 </li>
         <li><a href="api.html#module-navi.ui.file_panel.symlink">navi.ui.file_panel.symlink</a>
+</li>
+        <li><a href="api.html#module-navi.ui.header">navi.ui.header</a>
 </li>
         <li><a href="api.html#module-navi.ui.menubar">navi.ui.menubar</a>
 </li>
@@ -337,6 +371,8 @@
         <li><a href="api.html#module-navi.ui.statusbar">navi.ui.statusbar</a>
 </li>
         <li><a href="api.html#module-navi.ui.toolbar">navi.ui.toolbar</a>
+</li>
+        <li><a href="api.html#module-navi.utils">navi.utils</a>
 </li>
       </ul></li>
   </ul></td>
@@ -411,8 +447,6 @@
         <li><a href="api.html#module-navi.ui">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     navi.ui.context_menu
 
@@ -420,6 +454,15 @@
         <li><a href="api.html#module-navi.ui.context_menu">module</a>
 </li>
       </ul></li>
+      <li>
+    navi.ui.cursor
+
+      <ul>
+        <li><a href="api.html#module-navi.ui.cursor">module</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     navi.ui.file_panel
 
@@ -432,6 +475,13 @@
 
       <ul>
         <li><a href="api.html#module-navi.ui.file_panel.symlink">module</a>
+</li>
+      </ul></li>
+      <li>
+    navi.ui.header
+
+      <ul>
+        <li><a href="api.html#module-navi.ui.header">module</a>
 </li>
       </ul></li>
       <li>
@@ -467,6 +517,13 @@
 
       <ul>
         <li><a href="api.html#module-navi.ui.toolbar">module</a>
+</li>
+      </ul></li>
+      <li>
+    navi.utils
+
+      <ul>
+        <li><a href="api.html#module-navi.utils">module</a>
 </li>
       </ul></li>
       <li><a href="api.html#navi.api.next_item">next_item() (in module navi.api)</a>
@@ -519,19 +576,27 @@
 </li>
       <li><a href="api.html#id2">set() (in module navi.keymap)</a>, <a href="api.html#navi.keymap.set">[1]</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api.html#navi.ui.toolbar.set_items">set_items() (in module navi.ui.toolbar)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api.html#id0">set_module_text() (in module navi.ui.statusbar)</a>, <a href="api.html#navi.ui.statusbar.set_module_text">[1]</a>
 </li>
       <li><a href="api.html#navi.ui.statusbar.set_modules">set_modules() (in module navi.ui.statusbar)</a>
 </li>
-      <li><a href="api.html#navi.ui.shortcuts">shortcuts() (in module navi.ui)</a>
+      <li><a href="api.html#navi.ui.cursor.set_props">set_props() (in module navi.ui.cursor)</a>
+
+      <ul>
+        <li><a href="api.html#navi.ui.file_panel.set_props">(in module navi.ui.file_panel)</a>
 </li>
+        <li><a href="api.html#navi.ui.preview_panel.set_props">(in module navi.ui.preview_panel)</a>
+</li>
+      </ul></li>
       <li><a href="api.html#navi.api.sort_name">sort_name() (in module navi.api)</a>
 </li>
       <li><a href="api.html#navi.api.spawn">spawn() (in module navi.api)</a>
+</li>
+      <li><a href="api.html#navi.utils.split">split() (in module navi.utils)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -575,8 +640,12 @@
 <h2 id="U">U</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api.html#navi.ui.file_panel.symlink.underline">underline (in module navi.ui.file_panel.symlink)</a>
+      <li><a href="api.html#navi.ui.cursor.underline">underline (in module navi.ui.cursor)</a>
+
+      <ul>
+        <li><a href="api.html#navi.ui.file_panel.symlink.underline">(in module navi.ui.file_panel.symlink)</a>
 </li>
+      </ul></li>
       <li><a href="api.html#navi.api.unmark">unmark() (in module navi.api)</a>
 </li>
   </ul></td>
@@ -596,6 +665,8 @@
       <li><a href="api.html#navi.ui.file_panel.visible">visible (in module navi.ui.file_panel)</a>
 
       <ul>
+        <li><a href="api.html#navi.ui.header.visible">(in module navi.ui.header)</a>
+</li>
         <li><a href="api.html#navi.ui.menubar.visible">(in module navi.ui.menubar)</a>
 </li>
         <li><a href="api.html#navi.ui.preview_panel.visible">(in module navi.ui.preview_panel)</a>
