--- a/rtd/_readthedocs/genindex.html
+++ b/rtd/_readthedocs/genindex.html
@@ -36,7 +36,7 @@
             Navi
           </a>
               <div class="version">
-                1.2.9
+                v1.4.0
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
@@ -161,10 +161,10 @@
 </li>
       <li><a href="api.html#navi.opt.copy_path_separator">copy_path_separator (in module navi.opt)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api.html#navi.api.count">count() (in module navi.api)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api.html#navi.ui.context_menu.create">create() (in module navi.ui.context_menu)</a>
 </li>
       <li><a href="api.html#navi.ui.toolbar.create_button">create_button() (in module navi.ui.toolbar)</a>
@@ -174,6 +174,8 @@
       <li><a href="api.html#navi.api.create_file">create_file() (in module navi.api)</a>
 </li>
       <li><a href="api.html#navi.ui.statusbar.create_module">create_module() (in module navi.ui.statusbar)</a>
+</li>
+      <li><a href="api.html#navi.api.create_user_command">create_user_command() (in module navi.api)</a>
 </li>
       <li><a href="api.html#navi.api.cut">cut() (in module navi.api)</a>
 </li>
@@ -549,7 +551,7 @@
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api.html#navi.api.register_function">register_function() (in module navi.api)</a>
+      <li><a href="api.html#navi.api.remove_user_command">remove_user_command() (in module navi.api)</a>
 </li>
       <li><a href="api.html#navi.api.rename">rename() (in module navi.api)</a>
 </li>
@@ -565,6 +567,8 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api.html#navi.api.screenshot">screenshot() (in module navi.api)</a>
+</li>
       <li><a href="api.html#navi.api.search">search() (in module navi.api)</a>
 </li>
       <li><a href="api.html#navi.api.search_next">search_next() (in module navi.api)</a>
@@ -647,15 +651,13 @@
         <li><a href="api.html#navi.ui.file_panel.symlink.underline">(in module navi.ui.file_panel.symlink)</a>
 </li>
       </ul></li>
-      <li><a href="api.html#navi.api.unmark">unmark() (in module navi.api)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api.html#navi.api.unmark">unmark() (in module navi.api)</a>
+</li>
       <li><a href="api.html#navi.api.unmark_dwim">unmark_dwim() (in module navi.api)</a>
 </li>
       <li><a href="api.html#navi.api.unmount_drive">unmount_drive() (in module navi.api)</a>
-</li>
-      <li><a href="api.html#navi.api.unregister_function">unregister_function() (in module navi.api)</a>
 </li>
   </ul></td>
 </tr></table>
