added preview panel image rotate api

--- a/rtd/_readthedocs/changelog.html
+++ b/rtd/_readthedocs/changelog.html
@@ -109,6 +109,8 @@
 <li><p>Fixed X11/XCB docking black artifact.</p></li>
 <li><p>Pathbar widget customization Lua API added.</p></li>
 <li><p>Added tag for the release.</p></li>
+<li><p>Fixed custom input dialog.</p></li>
+<li><p>Added new custom question dialog.</p></li>
 </ul>
 </section>
 <section id="v1-2-9-1-february-2025">
