--- a/rtd/_readthedocs/genindex.html
+++ b/rtd/_readthedocs/genindex.html
@@ -561,6 +561,8 @@
 </li>
       <li><a href="api.html#navi.api.reset_filter">reset_filter() (in module navi.api)</a>
 </li>
+      <li><a href="api.html#navi.api.rotate_preview_image">rotate_preview_image() (in module navi.api)</a>
+</li>
   </ul></td>
 </tr></table>
 
